# caduceus-oauth

./: .gitignore  Cargo.toml  Dockerfile  Makefile  convert.json  docker-compose.yml
migrations/: 20240606062240_social.down.sql  20240606062240_social.up.sql
src/: config.rs  error.rs  google.rs  http.rs  lib.rs  main.rs
src/db/: models.rs
tests/: tests.rs
